# mumble-bg

./: .env.example  AGENTS.md  Makefile  README.md  agent.md  manage.py  pyproject.toml  requirements.txt
authenticator/: __init__.py  authenticator.py  database.py  django_settings.py  pyproject.toml  requirements.txt  urls.py  wsgi.py
bg/: __init__.py  contracts.py  control.py  control_keyring.py  control_main.py  crypto.py  db.py  eligibility.py  envtools.py  eve_lookup.py  handshake_cli.py  ice_inventory.py  ice_meta.py  murmur_inventory.py  passwords.py  pilot_snapshot.py  provisioner.py  settings.py  shitspeak.py  shitspeak_control.py  urls.py  wsgi.py
deploy/: create-db.sh  export-public-key.sh  generate-keypair.sh  setup-bg-env.sh  setup-hetzner.sh  setup-root.sh  undeploy-hetzner.sh  unsetup-root.sh
docs/: HANDOFF-2026-03-12-bg-dev.md  README.md  bg-state.md  bg_testing.md  bootstrap-dev-deploy.md  consolidated.md  database-bootstrap.md  deploy-inventory.md  deploy_manual.md  deploy_workflow.md  design.md  design_spec.md  extraction-inventory.md  fg-bg-contracts.md  fg-bg-troubleshooting.md  http_surface_review.md  ice_ssl.md  mumble-control.md  murmur-probe.md  new-server-setup.md  operations.md  prod_workflow_migration.md  relay_bots.md  runtime-blocker-2026-03-10.md  securing-ice-protocol.md  system-boundary.md  workflow-deploy.md
installation/: README.md  installation.md
monitor/: cli.py  debug_ice.py
mumble_authenticator/: Dockerfile  authenticator.py  requirements.txt
scripts/: precheck.sh  register_relay_bots.py
tests/: conftest.py  (+30 more)
(+111 files in other folders)
